cloud-mesh-poc/istio-network-policies/allow-odsc-to-alloydb.yaml
apiVersion: networking.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-odsc-to-alloydb
  namespace: odsc
spec:
  selector:
    matchLabels:
      app: odsc
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
    when:
    - key: request.headers[namespace]
      values: ["alloydb"]
