cloud-mesh-poc/istio-network-policies/allow-service-b-to-odsc-cards.yaml
apiVersion: networking.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-service-b-to-odsc-cards
  namespace: service-b
spec:
  selector:
    matchLabels:
      app: service-b
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
    when:
    - key: request.headers[namespace]
      values: ["odsc-cards"]
