cloud-mesh-poc/istio-network-policies/allow-service-d-to-jfrog.yaml
apiVersion: networking.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-service-d-to-jfrog
  namespace: service-d
spec:
  selector:
    matchLabels:
      app: service-d
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
    when:
    - key: request.headers[namespace]
      values: ["jfrog"]
