cloud-mesh-poc/istio-network-policies/default-deny.yaml
apiVersion: networking.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
spec:
  {}
